<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical">

    <View
        style="@style/horizontal_no_margin_divider_style"
        android:layout_marginTop="20dip" />

    <LinearLayout
        style="@style/setting_me_layout_style"
        android:orientation="horizontal">

        <TextView
            style="@style/me_info_style"
            android:layout_weight="1"
            android:text="@string/str_name" />

        <EditText
            android:id="@+id/et_member_name"
            style="@style/me_info_style"
            android:layout_weight="2"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="@string/str_input_member_name"
            android:maxLength="20"
            android:textColor="#797979"
            android:textCursorDrawable="@drawable/editcursor_bg" />
    </LinearLayout>

    <View
        style="@style/horizontal_no_margin_divider_style"
        android:layout_marginLeft="15dip" />

    <LinearLayout
        style="@style/setting_me_layout_style"
        android:orientation="horizontal">

        <TextView
            style="@style/me_info_style"
            android:text="@string/str_gender"
            android:textColor="#000000" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RadioGroup
                android:id="@+id/rg_gender"
                style="@style/me_info_style"
                android:layout_width="fill_parent"
                android:layout_alignParentRight="true"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/member_check_selector"
                    android:checked="false"
                    android:paddingLeft="5dip"
                    android:text="男"
                    android:textColor="#797979"
                    android:textSize="@dimen/txt_18" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dip"
                    android:button="@drawable/member_check_selector"
                    android:checked="false"
                    android:paddingLeft="5dip"
                    android:text="女"
                    android:textColor="#797979"
                    android:textSize="@dimen/txt_18" />
            </RadioGroup>
        </RelativeLayout>

    </LinearLayout>

    <View
        style="@style/horizontal_no_margin_divider_style"
        android:layout_marginLeft="15dip" />

    <LinearLayout
        style="@style/setting_me_layout_style"
        android:orientation="horizontal">

        <TextView
            style="@style/me_info_style"
            android:layout_weight="1"
            android:text="@string/str_age"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tv_age"
            style="@style/me_info_style"
            android:layout_weight="2"
            android:background="@null"
            android:drawableRight="@drawable/right_arrow"
            android:gravity="right|center_vertical"
            android:hint="@string/str_please_choose_age"
            android:textColor="#797979" />
    </LinearLayout>

    <View
        style="@style/horizontal_no_margin_divider_style"
        android:layout_marginLeft="15dip" />

    <LinearLayout
        style="@style/setting_me_layout_style"
        android:orientation="horizontal">

        <TextView
            style="@style/me_info_style"
            android:layout_weight="1"
            android:text="@string/str_cellphone_number"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_member_phonenumber"
            style="@style/me_info_style"
            android:layout_weight="2"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="@string/str_please_input_phone"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="#797979"
            android:textCursorDrawable="@drawable/editcursor_bg" />
    </LinearLayout>

    <View
        style="@style/horizontal_no_margin_divider_style"
        android:layout_marginLeft="15dip" />

    <LinearLayout
        style="@style/setting_me_layout_style"
        android:orientation="horizontal">

        <TextView
            style="@style/me_info_style"
            android:maxLength="20"
            android:text="@string/str_remark"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_member_remark"
            style="@style/me_info_style"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:maxLength="11"
            android:textColor="#797979"
            android:textCursorDrawable="@drawable/editcursor_bg" />
    </LinearLayout>

    <View style="@style/horizontal_no_margin_divider_style" />

</LinearLayout>