<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7" >

    <include
        android:id="@+id/linearLayout1"
        layout="@layout/two_widget_title_layout" />

    <LinearLayout
        android:id="@+id/lin_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2px"
            android:background="#E9EBED" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" >

            <TextView
                android:id="@+id/txt_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/et_account"
                android:layout_alignBottom="@+id/et_account"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="@string/str_user_name"
                android:textColor="#454545"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/txt_account"
                android:background="@drawable/ios_edittext_bg"
                android:ems="10"
                android:hint="@string/str_input_accout"
                android:maxLength="20"
                android:textColorHint="#797979"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/iv_clear"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/clear_pressed"
                android:visibility="invisible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1.2px"
                android:layout_alignBottom="@+id/et_account"
                android:background="#E9EBED" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_captcha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp" >

            <TextView
                android:id="@+id/txt_captcha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/et_captcha"
                android:layout_alignBottom="@+id/et_captcha"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="@string/str_captcha"
                android:textColor="#454545"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_captcha"
                android:layout_width="110dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/txt_captcha"
                android:background="@drawable/ios_edittext_bg"
                android:ems="10"
                android:hint="@string/str_input_captcha"
                android:inputType="number"
                android:maxLength="6"
                android:textColorHint="#797979"
                android:textSize="18sp" >
            </EditText>

            <ImageButton
                android:id="@+id/iv_clear1"
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/view_xian"
                android:background="@drawable/clear_pressed"
                android:visibility="invisible" />

            <View
                android:id="@+id/view_xian"
                android:layout_width="1.2px"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/et_captcha"
                android:background="#E9EBED" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/view_xian"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/button_gray" >

                    <Button
                        android:id="@+id/btn_send_captcha"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:background="@drawable/button_gray"
                        android:text="@string/str_send_captcha"
                        android:textColor="#4F4F4F"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:id="@+id/ll_time"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tv_countdown"
                            android:layout_width="@dimen/global_header_height"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="60" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="秒后" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2px"
            android:background="#E9EBED" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_login_findpwd"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/str_next"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_18" />
    </LinearLayout>

</RelativeLayout>